--- a/layouts/partials/custom-style.html
+++ b/layouts/partials/custom-style.html
@@ -36,11 +36,11 @@ html {
 }
 
 .container {
-  font-family: LXGW WenKai Screen, Condensed, Avenir Next Condensed Medium, Avenir Next Medium Condensed, Clear Han Serif, LXGW WenKai, Source Han Serif CN for Display, Swei B2 Sugar CJK SC, Swei Sugar CJK SC, Barlow Semi Condensed, Avenir Next Condensed, Baskerville SemiBold, Book Antiqua, Optima, Palatino, Roboto Condensed, sans-serif-condensed, Droid Serif, Helvetica Neue, Helvetica, PingFang SC, Segoe UI, system-ui, -apple-system, BlinkMacSystemFont, Microsoft YaHei, sans-serif, serif;
+  font-family: LXGW WenKai Screen, Clear Han Serif, LXGW WenKai, Source Han Serif CN for Display, Swei B2 Sugar CJK SC, Swei Sugar CJK SC, Baskerville SemiBold, Book Antiqua, Optima, Palatino, Roboto Condensed, sans-serif-condensed, Droid Serif, Helvetica Neue, Helvetica, PingFang SC, Segoe UI, system-ui, -apple-system, BlinkMacSystemFont, Microsoft YaHei, sans-serif, serif;
 }
 
 nav .container, footer .container {
-  font-family: Barlow Condensed, Avenir Next Condensed, Roboto Condensed, sans-serif-condensed, LXGW WenKai Screen, Clear Han Serif, LXGW WenKai, Source Han Serif CN for Display, Swei B2 Sugar CJK SC,Swei Sugar CJK SC, PingFang SC, Segoe UI, system-ui, -apple-system, BlinkMacSystemFont, Microsoft YaHei, sans-serif, serif;
+  font-family: Condensed, sans-serif-condensed, LXGW WenKai Screen, Clear Han Serif, LXGW WenKai, Source Han Serif CN for Display, Swei B2 Sugar CJK SC,Swei Sugar CJK SC, PingFang SC, Segoe UI, system-ui, -apple-system, BlinkMacSystemFont, Microsoft YaHei, sans-serif, serif;
 }
 
 </style>
