--- a/layouts/partials/custom-style.html
+++ b/layouts/partials/custom-style.html
@@ -36,7 +36,7 @@ html {
 }
 
 .container {
-  font-family: LXGW WenKai Screen, Clear Han Serif, LXGW WenKai, Source Han Serif CN for Display, Swei B2 Sugar CJK SC, Swei Sugar CJK SC, Baskerville SemiBold, Book Antiqua, Optima, Palatino, Roboto Condensed, sans-serif-condensed, Droid Serif, Helvetica Neue, Helvetica, PingFang SC, Segoe UI, system-ui, -apple-system, BlinkMacSystemFont, Microsoft YaHei, sans-serif, serif;
+  font-family: LXGW WenKai Screen, Clear Han Serif, LXGW WenKai, Source Han Serif CN for Display, Swei B2 Sugar CJK SC, Swei Sugar CJK SC, Helvetica Neue, Helvetica, PingFang SC, Segoe UI, system-ui, -apple-system, BlinkMacSystemFont, Microsoft YaHei, Baskerville SemiBold, Book Antiqua, Optima, Palatino, Droid Serif, sans-serif, serif;
 }
 
 nav .container, footer .container {
