--- a/layouts/partials/custom-style.html
+++ b/layouts/partials/custom-style.html
@@ -1,73 +1,65 @@
 <style>
 /*
-@font-face {
-  font-family: Clear Han Serif Subset;
-  font-display: swap;
-  src: url(https://cdn.jsdelivr.net/npm/clear-han-serif-subset@0.3.0/woff2/clear-han-serif.subset.6501.char.symbol.woff2) format('woff2');
-  font-weight: 400;
-  font-style: normal;
-}
 
-@font-face {
-  font-family: LXGW WenKai Screen;
-  font-display: swap;
-  src:  local(LXGW WenKai Screen),
-        url('https://cdn.jsdelivr.net/npm/lxgw-wenkai-subset@0.5.1/woff2/lxgw-wenkai-screen.subset.6501.char.symbol.woff2') format('woff2');
-}
 */
 
 @font-face {
   font-family: Latin Condensed;
-  src: local(Avenir Next Condensed Medium),
-       local(AvenirNextCondensed-Medium),
-       local(Avenir Medium),
-       local(Avenir-Medium),
+  src: local(Avenir Next Condensed),
+       local(Avenir),
        local(Roboto Condensed),
-       local(RobotoCondensed-Regular),
-       local(sans-serif-condensed),
-       local(Barlow Semi Condensed);
+       local(sans-serif-condensed);
   unicode-range: U+0030-U+0039, U+0041-U+005A, U+0061-U+007A;
 }
 
 @font-face {
   font-family: Quotation Marks;
   src: local(American Typewriter),
-       local(Arial),
-       local(Arial Rounded MT Bold),
-       local(Times New Roman),
-       local(Times),
-       local(Times Roman);
+       local(Arial Rounded MT Bold);
   unicode-range: U+0022, U+0027, U+0060, U+00B4, U+2018, U+2019, U+201C, U+201D;
 }
 
+/*
 @font-face {
   font-family: Dashes;
   src: local(Arial),
-       local(Arial Rounded MT Bold),
        local(Times New Roman),
        local(Times),
-       local(Times Roman),
-       local(SimHei),
-       local(SimSun);
+       local(SimHei);
   unicode-range: U+002D, U+2014;
 }
+*/
 
 @font-face {
   font-family: Commercial At;
-  src: local(Verdana),
-       local(Droid Sans),
-       local(Helvetica),
-       local(Helvetica Neue);
+  src: local(Verdana);
   unicode-range: U+0040;
 }
 
 .container {
-  font-family: LXGW WenKai Screen, Quotation Marks, Dashes, Commercial At, Clear Han Serif, LXGW WenKai, Swei B2 Sugar CJK SC, Swei Sugar CJK SC, Palatino, Palatino Linotype, Optima, Book Antiqua, Baskerville SemiBold, sans-serif-condensed, Droid Serif, Helvetica, Helvetica Neue, PingFang SC, Segoe UI, system-ui, -apple-system, BlinkMacSystemFont, Microsoft YaHei, sans-serif, serif;
+  font-family: Quotation Marks, Dashes, Commercial At, Iowan Old Style, Candara, Georgia, Helvetica, Helvetica Neue, Latin Condensed, STZhongsong, PingFang SC, DengXian, Microsoft YaHei, system-ui, -apple-system, BlinkMacSystemFont, Droid Serif, sans-serif, serif;
+}
+
+ul ul {
+  list-style-type: circle;
 }
 
 nav .container, footer .container {
-  font-family: LXGW WenKai Screen, Quotation Marks, Latin Condensed, PingFang SC, Segoe UI, system-ui, -apple-system, BlinkMacSystemFont, Microsoft YaHei, sans-serif, serif;
+  font-family: Latin Condensed, STZhongsong, PingFang SC, DengXian, Microsoft YaHei, system-ui, -apple-system, BlinkMacSystemFont, sans-serif, serif;
 }
+
+article .text a[href*="//"] {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='10' viewBox='0 0 10 10'%3E%3Cg fill='%2336b'%3E%3Cpath d='M8.9 8.9H1.1V1.1h2.8V0H1.1C.5 0 0 .5 0 1.1v7.8C0 9.5.5 10 1.1 10h7.8c.6 0 1.1-.5 1.1-1.1V6.1H8.9v2.8z'/%3E%3Cpath d='M10 0H5.6l1.8 1.8L4.2 5l.8.8 3.2-3.2L10 4.4V0z'/%3E%3C/g%3E%3C/svg%3E");
+  background-position: 100%;
+  background-repeat: no-repeat;
+  background-size: .55em;
+  padding-right: .85em;
+}
+  /*
+article .text a[href*="//"]::after {
+  content: url("data:image/svg+xml,%3Csvg style='color: %2336b;' fill='none' stroke='currentColor' viewBox='-3 -3 24 24' width='.85em' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14'%3E%3C/path%3E%3C/svg%3E");
+}
+  */
 
 p {
   hanging-punctuation: allow-end;
@@ -76,10 +68,6 @@ p {
 hr + h2 {
   margin-top: 0;
   margin-bottom: 0.375em;
-}
-
-blockquote small {
-  text-transform: uppercase;
 }
 
 </style>
