update: external link icon

--- a/layouts/partials/custom-style.html
+++ b/layouts/partials/custom-style.html
@@ -53,7 +53,7 @@ article .text a[href*="//"] {
   background-position: 100%;
   background-repeat: no-repeat;
   background-size: .55em;
-  padding-right: .85em;
+  padding: 0 0.85em 0.12em 0;
 }
   /*
 article .text a[href*="//"]::after {
