update(style): fonts

--- a/layouts/partials/custom-style.html
+++ b/layouts/partials/custom-style.html
@@ -37,11 +37,11 @@
 }
 
 .container {
-  font-family: Quotation Marks, Dashes, Commercial At, Iowan Old Style, Candara, Georgia, Helvetica, Helvetica Neue, Latin Condensed, STZhongsong, PingFang SC, DengXian, Microsoft YaHei, system-ui, -apple-system, BlinkMacSystemFont, Droid Serif, sans-serif, serif;
+  font-family: Iowan Old Style, Palatino Linotype, Palatino, Candara, Georgia, Helvetica Neue, Helvetica, STZhongsong, PingFang SC, DengXian, Microsoft YaHei, system-ui, -apple-system, BlinkMacSystemFont, Droid Serif, sans-serif, serif;
 }
 
 nav .container, footer .container {
-  font-family: Latin Condensed, STZhongsong, PingFang SC, DengXian, Microsoft YaHei, system-ui, -apple-system, BlinkMacSystemFont, sans-serif, serif;
+  font-family: Avenir Next Condensed, Avenir, Roboto Condensed, sans-serif-condensed, PingFang SC, Segoe UI, Microsoft YaHei Light, system-ui, -apple-system, BlinkMacSystemFont, sans-serif, serif;
 }
   /*
 article .text a[href*="//"]::after {
