--- a/layouts/partials/custom-style.html
+++ b/layouts/partials/custom-style.html
@@ -58,4 +58,22 @@ hr + h2 {
   margin-bottom: 0.375em;
 }
 
+kbd {
+    background-color: #eee;
+    border-radius: 3px;
+    border: 1px solid #b4b4b4;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .2), 0 2px 0 0 rgba(255, 255, 255, .7) inset;
+    color: #333;
+    display: inline-block;
+    font-size: .85em;
+    font-weight: 700;
+    line-height: 1;
+    padding: 2px 4px;
+    white-space: nowrap;
+   }
+
+.card {
+  padding: .9em 1em 1em 1em;
+}
+
 </style>
