test(style): padding revert, font-size

--- a/layouts/partials/custom-style.html
+++ b/layouts/partials/custom-style.html
@@ -49,6 +49,10 @@ article .text a[href*="//"]::after {
 }
   */
 
+html {
+  font-size: 13px;
+}
+
 p {
   hanging-punctuation: allow-end;
 }
@@ -71,9 +75,5 @@ kbd {
     padding: 2px 4px;
     white-space: nowrap;
    }
-
-.card {
-  padding: 1.175rem 1rem 1.175rem 1.25rem;
-}
 
 </style>
