--- a/layouts/partials/custom-style.html
+++ b/layouts/partials/custom-style.html
@@ -1,7 +1,4 @@
 <style>
-/*
-
-*/
 
 @font-face {
   font-family: Latin Condensed;
@@ -19,17 +16,6 @@
   unicode-range: U+0022, U+0027, U+0060, U+00B4, U+2018, U+2019, U+201C, U+201D;
 }
 
-/*
-@font-face {
-  font-family: Dashes;
-  src: local(Arial),
-       local(Times New Roman),
-       local(Times),
-       local(SimHei);
-  unicode-range: U+002D, U+2014;
-}
-*/
-
 @font-face {
   font-family: Commercial At;
   src: local(Verdana);
@@ -37,25 +23,14 @@
 }
 
 .container {
-  font-family: Iowan Old Style, Palatino Linotype, Palatino, Candara, Georgia, Helvetica Neue, Helvetica, STZhongsong, PingFang SC, DengXian, Microsoft YaHei, system-ui, -apple-system, BlinkMacSystemFont, Droid Serif, sans-serif, serif;
+  font-family: Commercial At, 霞鹜文楷 屏幕阅读版, LXGW WenKai Screen, 屏显臻宋, Clear Han Serif, TsangerYuMo W02, Quotation Marks, Iowan Old Style, Georgia, Palatino Linotype, Palatino, Candara, Helvetica Neue, Helvetica, STZhongsong, PingFang SC, DengXian, Microsoft YaHei, Latin Condensed, system-ui, -apple-system, BlinkMacSystemFont, Droid Serif, sans-serif, serif;
 }
 
-nav .container, footer .container {
-  font-family: Avenir Next Condensed, Avenir, Roboto Condensed, sans-serif-condensed, PingFang SC, Segoe UI, Microsoft YaHei Light, system-ui, -apple-system, BlinkMacSystemFont, sans-serif, serif;
-}
   /*
 article .text a[href*="//"]::after {
   content: url("data:image/svg+xml,%3Csvg style='color: %2336b;' fill='none' stroke='currentColor' viewBox='-3 -3 24 24' width='.85em' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14'%3E%3C/path%3E%3C/svg%3E");
 }
   */
-
-html {
-  font-size: 14px;
-}
-
-p {
-  hanging-punctuation: allow-end;
-}
 
 hr + h2 {
   margin-top: 0;
