--- a/layouts/partials/custom-style.html
+++ b/layouts/partials/custom-style.html
@@ -1,15 +1,6 @@
 <style>
 
 @font-face {
-  font-family: Latin Condensed;
-  src: local(Avenir Next Condensed),
-       local(Avenir),
-       local(Roboto Condensed),
-       local(sans-serif-condensed);
-  unicode-range: U+0030-U+0039, U+0041-U+005A, U+0061-U+007A;
-}
-
-@font-face {
   font-family: Quotation Marks;
   src: local(American Typewriter),
        local(Arial Rounded MT Bold);
@@ -23,7 +14,20 @@
 }
 
 .container {
-  font-family: Commercial At, 霞鹜文楷 屏幕阅读版, LXGW WenKai Screen, 屏显臻宋, Clear Han Serif, TsangerYuMo W02, Quotation Marks, Iowan Old Style, Georgia, Palatino Linotype, Palatino, Candara, Helvetica Neue, Helvetica, STZhongsong, PingFang SC, DengXian, Microsoft YaHei, Latin Condensed, system-ui, -apple-system, BlinkMacSystemFont, Droid Serif, sans-serif, serif;
+  font-family: 
+  霞鹜文楷 屏幕阅读版, LXGW WenKai Screen, 
+  Commercial At, Quotation Marks, 
+  屏显臻宋, Clear Han Serif, 
+  TsangerYuMo W02, 
+  Iowan Old Style, Cambria, Georgia, 
+  华文中宋, STZhongsong, 
+  system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, 
+  Emoji Fonts, 
+  Latin Condensed, 
+  Candara, Helvetica Neue, Helvetica, Arial, 
+  Palatino Linotype, Palatino, Droid Serif, 
+  PingFang SC, DengXian, Microsoft YaHei, 
+  sans-serif, serif;
 }
 
   /*
